858:bug/Pagination is not styled for dark mode

--- a/components/Pagination/Pagination.module.scss
+++ b/components/Pagination/Pagination.module.scss
@@ -14,6 +14,11 @@
     cursor: pointer;
     user-select: none;
 
+    &--dark{
+        border-color:white; 
+        color: white;
+    }
+
     &--active {
         background-color: var(--blue);
         color: white;
@@ -24,4 +29,6 @@
         border-color: var(--mediumGray);
         color: var(--mediumGray);
     }
+    
 }
+
